--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         </div>
     </nav>
     <header class=" contaier-fluid hero text-light text-right py-5 mt-5">
-        <div class="container">
-            
+        <div class="container">            
             <h1 class=" font-weight-bold my-5">Servicios Gráficos 4Q </h1>
             <h3>Somos una empresa familiar comprometida con entregar un servicio de calidad que cumpla con sus necesidades.</h3>
           
@@ -111,7 +110,7 @@
 
   <!-- inicio footer-->
    <footer class="footer">
-     <div class="container-fluid text-center col-md-12 col-12" style="background-color: #3adbe6;" >
+     <div class="container-fluid text-center col-md-12 col-12" >
      <p> @Todos los derecchos reservado Servicios Gráficos 4Q</p>
      <p>Correo : serviciosgraficos4Q@gmail.com</p>
      </div>
